Updated css to fix alignment and added fails for api calls

--- a/css/badge.css
+++ b/css/badge.css
@@ -1,6 +1,7 @@
 .code-badge {
   text-align: center;
   display: inline-block;
+  vertical-align: top;
 }
 
 .code-badge .outer {
